replace H05R0 with H1BR6
Signed-off-by: Tuan Anh Vo <votuananhs@gmail.com>

--- a/MDK-ARM/H05Rx.uvprojx
+++ b/MDK-ARM/H05Rx.uvprojx
@@ -333,9 +333,9 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>USE_HAL_DRIVER,STM32F091xB,H05R0,_module=1</Define>
+              <Define>USE_HAL_DRIVER,STM32F091xB,H1BR6,_module=1</Define>
               <Undefine></Undefine>
-              <IncludePath>..\User;..\H05R0;..\BOS;..\Thirdparty\Middleware\FreeRTOS\Source\CMSIS_RTOS;..\Thirdparty\Middleware\FreeRTOS\Source\include;..\Thirdparty\Middleware\FreeRTOS\Source\portable\RVDS\ARM_CM0;..\Thirdparty\STM32F0xx_HAL_Driver\Inc\Legacy;..\Thirdparty\STM32F0xx_HAL_Driver\Inc;..\Thirdparty\CMSIS\Device\ST\STM32F0xx\Include;..\Thirdparty\CMSIS\Include;..\Thirdparty\Middleware\FatFs\source;..\Thirdparty\Middleware\FatFs\drivers</IncludePath>
+              <IncludePath>..\User;..\H1BR6;..\BOS;..\Thirdparty\Middleware\FreeRTOS\Source\CMSIS_RTOS;..\Thirdparty\Middleware\FreeRTOS\Source\include;..\Thirdparty\Middleware\FreeRTOS\Source\portable\RVDS\ARM_CM0;..\Thirdparty\STM32F0xx_HAL_Driver\Inc\Legacy;..\Thirdparty\STM32F0xx_HAL_Driver\Inc;..\Thirdparty\CMSIS\Device\ST\STM32F0xx\Include;..\Thirdparty\CMSIS\Include;..\Thirdparty\Middleware\FatFs\source;..\Thirdparty\Middleware\FatFs\drivers</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -527,47 +527,47 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>BITZ/H05R0</GroupName>
+          <GroupName>BITZ/H1BR6</GroupName>
           <Files>
             <File>
-              <FileName>H05R0.c</FileName>
+              <FileName>H1BR6.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\H05R0\H05R0.c</FilePath>
+              <FilePath>..\H1BR6\H1BR6.c</FilePath>
             </File>
             <File>
-              <FileName>H05R0_dma.c</FileName>
+              <FileName>H1BR6_dma.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\H05R0\H05R0_dma.c</FilePath>
+              <FilePath>..\H1BR6\H1BR6_dma.c</FilePath>
             </File>
             <File>
-              <FileName>H05R0_gpio.c</FileName>
+              <FileName>H1BR6_gpio.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\H05R0\H05R0_gpio.c</FilePath>
+              <FilePath>..\H1BR6\H1BR6_gpio.c</FilePath>
             </File>
             <File>
-              <FileName>H05R0_it.c</FileName>
+              <FileName>H1BR6_it.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\H05R0\H05R0_it.c</FilePath>
+              <FilePath>..\H1BR6\H1BR6_it.c</FilePath>
             </File>
             <File>
-              <FileName>H05R0_spi.c</FileName>
+              <FileName>H1BR6_spi.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\H05R0\H05R0_spi.c</FilePath>
+              <FilePath>..\H1BR6\H1BR6_spi.c</FilePath>
             </File>
             <File>
-              <FileName>H05R0_uart.c</FileName>
+              <FileName>H1BR6_uart.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\H05R0\H05R0_uart.c</FilePath>
+              <FilePath>..\H1BR6\H1BR6_uart.c</FilePath>
             </File>
             <File>
-              <FileName>H05R0_sd_spi.c</FileName>
+              <FileName>H1BR6_sd_spi.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\H05R0\H05R0_sd_spi.c</FilePath>
+              <FilePath>..\H1BR6\H1BR6_sd_spi.c</FilePath>
             </File>
             <File>
               <FileName>startup_stm32f091xc.s</FileName>
               <FileType>2</FileType>
-              <FilePath>..\H05R0\startup_stm32f091xc.s</FilePath>
+              <FilePath>..\H1BR6\startup_stm32f091xc.s</FilePath>
             </File>
           </Files>
         </Group>
