--- a/MDK-ARM/H1BRx.uvprojx
+++ b/MDK-ARM/H1BRx.uvprojx
@@ -312,7 +312,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>1</Optim>
+            <Optim>2</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -502,6 +502,16 @@
               <FileType>1</FileType>
               <FilePath>..\Thirdparty\STM32F0xx_HAL_Driver\Src\stm32f0xx_hal_rtc_ex.c</FilePath>
             </File>
+            <File>
+              <FileName>stm32f0xx_hal_crc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Thirdparty\STM32F0xx_HAL_Driver\Src\stm32f0xx_hal_crc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f0xx_hal_crc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Thirdparty\STM32F0xx_HAL_Driver\Src\stm32f0xx_hal_crc_ex.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -516,6 +526,11 @@
               <FileName>BOS_CLI.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\BOS\BOS_CLI.c</FilePath>
+            </File>
+            <File>
+              <FileName>BOS_dma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\BOS\BOS_dma.c</FilePath>
             </File>
             <File>
               <FileName>BOS_eeprom.c</FileName>
